# cpp_tricks

./: .gitignore  LICENSE
LinuxGpioLedDriver/: Makefile  Readme.md  ledgpio.c  ledgpio.h  ledgpio_client.cpp  ledgpio_client.h  test.cpp
PostgresProxy/: Makefile  Readme.md  logger.cpp  logger.hpp  main.cpp  proxy  proxy.cpp  proxy.hpp  session.cpp  session.hpp  socket.cpp  socket.hpp  test.py  thread_pool.cpp  thread_pool.hpp
autocomplete/: Makefile  Readme.md  autocomplete.cpp
backtrace/: backtrace.cpp
cjson++/: Makefile  cjson.hpp  readme.md  test.cpp
cmake_project_template/: CMakeLists.txt  CMakePresets.json  LICENSE  Packaging.cmake  Readme.md
cmake_project_template/modules/: CMakeLists.txt
cmake_project_template/modules/app/: CMakeLists.txt  app.cpp
cmake_project_template/modules/libfoo/: CMakeLists.txt
cmake_project_template/modules/libfoo/include/: foo.hpp
cmake_project_template/modules/libfoo/src/: foo.cpp
cmake_project_template/modules/libfoo/test/: CMakeLists.txt  foo_test.cpp
cmake_project_template/toolchains/: x86_gcc.cmake
concurrent_read_write/: Makefile  concurrency.cpp  readme.md
data_structures/AVL/: avl.cpp
epoll/: CMakeLists.txt  epoll.cpp  epoll.hpp  main.cpp
error_code/: error_code.cpp
error_stack/: Makefile  error.cpp  error.hpp  main.cpp  readme.md
factory/: basic_factory.cpp  factory.cpp  readme.md
global_lock/: Makefile  file_lock.cpp  readme.md  semaphore.cpp
ipc/message_queue/: Makefile  mq_test.cpp
ipc/pipe/: pipe.cpp
ipc/pipe_ipc/: server.cpp
ipc/udp_socket/: Makefile  udp_ttl.cpp
ipc/unix_sockets/: Makefile  local_socket.cpp  readme.md
math/: Makefile  cumulative_average.cpp  simple_moving_average.cpp
pipe_filter/: Makefile  filter.cpp
pipe_ipc/: Makefile  client.cpp
plugin/: Makefile  app.cpp  libplugin.cpp  libplugin.hpp  my_plugin.hpp  readme.md  test_plugin.cpp
random/: Makefile  random.cpp
scope_exit/: Makefile  readme.md  scope_exit.cpp  scope_exit.hpp  scope_exit_unique_ptr.cpp
serial_dump/: Makefile  serialdump.c
shared_lib/: Makefile  app.cpp  libtest.cpp  libtest.hpp
subprocess_io/: Makefile  app.cpp  popen.cpp  readme.md  subprocess_io.cpp
thread_pool/: Makefile  main.cpp  readme.md  thread_pool.cpp  thread_pool.hpp
tree/: tree.cpp
unix_sockets/: client.cpp  local_socket.hpp  server.cpp
